docs(runbook): update Known limitations after #1 + #3 wiring fixes
- §1: original wiring blocker is closed (SUT launches, APP_BASE_URI
  exported); the residual is a RestAssured 5.4.0 + Groovy + JDK 17
  NullPointerException inside the request-building closure. Fix
  candidates: RestAssured 5.5.x or @SpringBootTest-based template.
- §3: the @PathVariable("x") aliasing case is closed (covered by
  unit tests); petclinic's @ModelAttribute-at-controller-class pattern
  is a different unmodeled case that explains why quarantine counts
  stayed the same in the live re-run.
- Updated Coverage Attribution paragraph to reflect actual SUT-up,
  generated-tests-error-in-Groovy state.

Co-Authored-By: Claude Opus 4.7 (1M context) <noreply@anthropic.com>